# CoolCompilerProject

./: .gitignore  CMakeLists.txt  CoolCompilerProjectReport.docx  Doxyfile  Makefile  ParserDriver.h  README.md  Tag.cpp  Token.cpp  ast.h  environment.h  installDependenciesUbuntu20.10.sh  lex.l  lexer.ll  main.cpp  parse.y  syntaxTreeNodes.h
app/: Makefile  main.cpp
lib/: Makefile  ParserDriver.cpp  ParserDriver.h  ast.cpp  ast.h  lexer.ll  parse.y
src/: CMakeLists.txt  Environment.cpp  Environment.h  GrammarNotes  ParserDriver.cpp  ParserDriver.hh  Tag.h  ast.cpp  ast.h  codegen.cpp  codegen.h  environment.h  lex.l  lex.ll  main.cpp  parse.yy  parseTreeNodes.cpp  parseTreeNodes.h  syntaxTreeNodes.cpp  syntaxTreeNodes.h  type.cpp  type.h
src/parseTree/: parseTreeNodes.cpp  parseTreeNodes.h
test/: Makefile
test/gtest/: gtest-all.cc  gtest.h
test/resources/CoolPrograms/: assignExpr.cl  bareMinimum.cl  blockExprFiveExpressions.cl  classInherits.cl  dynamicDispatchNoArgs.cl  dynamicDispatchOneArg.cl  identifierExpr.cl  integerExpr.cl  isvoidExpr.cl  methodFiveFormals.cl  parenthesizedExpr.cl  relationalExpr.cl  selfDispatchTwoArgs.cl  severalAttrAndMethods.cl  singleAttrNoInit.cl  staticDispatchFiveArgs.cl
test/src/: astTests.cpp  firstTest.cpp  utility.cpp
tests/: CMakeLists.txt
tests/resources/: cool  ivan_relationalExecution.temp  relationalExecution.temp
tests/resources/CoolAssemblyPrograms/: PA5YouTubeExample.cl  PA5YouTubeExample2.cl  PA5YouTubeExampleIvan.cl-asm  assign.cl  chainedCopy.cl  dynamicDispatchOffAnonymous.cl  if.cl  isvoid.cl  methodsDifferentNumParameters.cl  methodsDifferentNumParametersLet.cl  methodsDifferentNumParametersLetWithInitializer.cl  methodsDifferentNumParametersLetWithInitializers.cl  relational.cl  unary.cl  unaryNegate.cl  unaryNot.cl  while.cl  while2.cl
tests/resources/CoolPrograms/: ANNOTATEDASTEXAMPLE.CL  PA4example.cl  PA4example.cl-type2  PA5YouTubeExample.cl  SELF_TYPE.cl  TestingAssembly.cl  allDispatchesFiveArguments.cl  allDispatchesNoArguments.cl  allDispatchesOneArguments.cl  allDispatchesTwoArguments.cl  assignExpr.cl  assignMismatchButConforms.cl  assignTricky.cl  atoi.cl  bareMinInhSingleFeature.cl  bareMinInput.cl  bareMinInputWithInh.cl  bareMinNoInhSingleFeature.cl  bareMinimum.cl  blockExprFiveExpressions.cl  blockExprNoExpressions.cl  blockExprOneExpression.cl  blockExprOneExpressions.cl  blockExprTwoExpressions.cl  booleanExpr.cl  caseExprManyCase.cl  caseExprOneCase.cl  caseExprTricky.cl  classInherits.cl  classMapNoInitializations.cl  classMapNoInitializations.cl-type  classMapNoInitializationsWith1Inheritance.cl  classMapNoInitializationsWith1Inheritance.cl-type  classMapNoInitializationsWith2Inheritance.cl  classMapNoInitializationsWith2Inheritance.cl-type  classMapNoInitializationsWithMoreInheritance.cl  classMapNoInitializationsWithMoreInheritance.cl-type  dynamicDispatchExpr.cl  dynamicDispatchFiveArgs.cl  dynamicDispatchTwoArgs.cl  (+43 more)
tests/resources/CoolPrograms/CoolProgramsAssembly/: Main.cl  arith.cl  assignIntAttrExpr.cl  assignIntFirstParamExpr.cl  blockExpr.cl  case.cl  chainedCalls.cl  chainedCopy.cl  concat.cl  dynamicDispatch.cl  ifExpr.cl  intBlockExpr.cl  intImmutability.cl  isvoid.cl  length.cl  methodOverride.cl  printFirstIntParam.cl  printFirstStringParam.cl  printIntAttrInit.cl  printIntAttrNoInit.cl  printIntLiteral.cl  printIntParam.cl  printLetInt.cl  printLetIntNested.cl  printSecondIntParam.cl  printSecondStringParam.cl  printStringAttrInit.cl  printStringAttrNoInit.cl  printStringLiteral.cl  printStringParam.cl  relational.cl  relationalBool.cl  relationalPointer.cl  relationalString.cl  relationalVoid.cl  staticDispatch.cl  substr.cl  typeName.cl  unaryNegate.cl  unaryNot.cl  (+3 more)
tests/resources/CoolPrograms/CoolProgramsAssembly/RuntimeNegative/: caseNoMatchingBranch.cl  caseVoidSwitchee.cl  divByZeroAfterMutation.cl  divByZeroExpression.cl  divByZeroVar.cl  dynamicDispatchOnVoid.cl  staticDispatchOnVoid.cl  substrNegLengthArg.cl  substrNegStartArg.cl  substrOutOfRange.cl
tests/resources/CoolPrograms/CoolProgramsFull/: hello-world.cl  primes.cl
tests/resources/CoolPrograms/CoolProgramsNegative/: arith.cl  assign.cl  attrInit.cl  caseRepeatTypeTwice.cl  equalBool.cl  if.cl  inheritBool.cl  inheritInt.cl  inheritString.cl  let0Identifiers.cl  letInit.cl  letRepeatIdentifier.cl  ltString.cl  negate.cl  noMainMethod.cl  noZeroArgMainMethod.cl  not.cl  selfDispatchMethodNotFound.cl  selfDispatchParameterNonconformance.cl  staticDispatchMethodNotFound.cl  staticDispatchNumArguments.cl  staticDispatchParameterNonconformance.cl  while.cl
tests/resources/CoolPrograms/semanticAnalyzerNegative/: semanticRulesImplemented.txt  typeCheckingRulesImplemented.txt
tests/resources/CoolPrograms/semanticAnalyzerNegative/class/: inheritBool.cl  inheritInt.cl  inheritString.cl  noMainClass.cl
tests/resources/CoolPrograms/semanticAnalyzerNegative/expression/: ASSIGN.cl  allDispatches.cl  arithAll.cl  arithDivide.cl  arithMinus.cl  arithPlus.cl  arithTimes.cl  attr-init.cl  block0Subexpressions.cl  case0Cases.cl  caseRepeatTwoTypesTwice.cl  caseRepeatTypeOnce.cl  caseRepeatTypes.cl  dynamicDispatchMethodNotFound.cl  dynamicDispatchNumArguments.cl  dynamicDispatchParameterNonconformance.cl  equalInt.cl  equalString.cl  if.cl  let-init.cl  let0Identifiers.cl  letRepeatIdentifier.cl  loop.cl  ltBool.cl  ltInt.cl  lteBool.cl  lteInt.cl  lteString.cl  negate.cl  not.cl  selfDispatchMethodNotFound.cl  selfDispatchNumArguments.cl  selfDispatchParameterNonconformance.cl  staticDispatch@TypeNonconformance.cl  while.cl
tests/resources/CoolPrograms/semanticAnalyzerNegative/method/: methodReturnType.cl  methodSELF_TYPEreturnType.cl  methodSELF_TYPEreturnType2.cl  parameter-less_main_Main.cl
tests/resources/parseTree/: bareMinInput.txt
tests/src/: astTests.cpp  codeGenTests.cpp  codegenTests.cpp  dummyTest.cpp  lexer.cpp  lexerTests.cpp  main.cpp  parseTreeTests.cpp  semanticAnalyzerTests.cpp  syntaxTreeTests.cpp  utility.cpp  utility.h
